flux/resources/argo/github/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hook
spec:
  parentRefs:
    - name: eg
      namespace: envoyproxy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: github-eventsource-svc
          namespace: argo-github
          port: 13000
      matches:
        - path:
            value: /hook
